Enhance release notes generation and plugin management
Updated `config.json` to include schema version, description, and execution settings for structured release notes. Modified `skprompt.txt` to provide clear instructions for generating release notes from commit messages. Added code in `Program.cs` to manage the ReleaseNotesPlugin and guide versioning prompts. Updated `SemanticKernelPlayground.csproj` to ensure all plugin files are copied to the output directory, improving plugin management.

--- a/SemanticKernelPlayground.csproj
+++ b/SemanticKernelPlayground.csproj
@@ -27,4 +27,9 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Plugins\**\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
